# docker-images

./: Makefile  README.md  build-core  build-core.sh  buildDEB.sh  buildRPM.sh  make-core  make-core.sh  make-images.py  pyproject.toml  test-core  test-core-all  test-core-all.sh  test-core.sh
sudo/centos-sudo/: Dockerfile
sudo/debian-sudo/: Dockerfile
sudo/fedora-sudo/: Dockerfile
sudo/ubuntu-sudo/16.04/: Dockerfile
sudo/ubuntu-sudo/18.04/: Dockerfile
sudo/ubuntu-sudo/20.04/: Dockerfile
synergy-core/: build.py  make.sh
synergy-core/centos/7.6/: Dockerfile  _original
synergy-core/centos/8/: Dockerfile
synergy-core/debian/10/: Dockerfile
synergy-core/debian/11/: Dockerfile
synergy-core/debian/12/: Dockerfile
synergy-core/debian/9/: Dockerfile  _original
synergy-core/debian/sid/: Dockerfile
synergy-core/fedora/28/: Dockerfile
synergy-core/fedora/29/: Dockerfile
synergy-core/fedora/30/: Dockerfile
synergy-core/fedora/33/: Dockerfile
synergy-core/fedora/34/: Dockerfile
synergy-core/fedora/35/: Dockerfile
synergy-core/fedora/36/: Dockerfile
synergy-core/fedora/37/: Dockerfile
synergy-core/fedora/38/: Dockerfile
synergy-core/fedora/39/: Dockerfile
synergy-core/fedora/rawhide/: Dockerfile
synergy-core/rhel/8.3/: Dockerfile
synergy-core/ubuntu/14.04/: Dockerfile
synergy-core/ubuntu/16.04/: Dockerfile
synergy-core/ubuntu/18.04/: Dockerfile
synergy-core/ubuntu/19.10/: Dockerfile
synergy-core/ubuntu/20.04/: Dockerfile
synergy-core/ubuntu/21.04/: Dockerfile
synergy-core/ubuntu/22.04/: Dockerfile
synergy-vcpkg/: build.py
(+12 files in other folders)
