[tool.poetry]
name = "synergy-core"
version = "0.1.0"
description = ""
authors = ["Kyle Bloom <kyle@symless.com>"]

[tool.poetry.dependencies]
python = "^3.8"
docker = "^5.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
